--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,13 @@
       "js": ["content.js"]
     }
   ],
+  "web_accessible_resources": [
+    {
+      "resources": ["fonts/*.woff2"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "icons": {
-    "128": "icon.png"
+    "128": "icons/icon.png"
   }
 }
